--- a/index.html
+++ b/index.html
@@ -3,14 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>TECHFORGE</title>
 </head>
-<body>
+<body class="">
     
+      <!-- Inicio header -->
+      <header>
+
+        <nav class="navbar navbar-expand-lg naver">
+            <div class="container-fluid">
+              <a href="index.html"><img src="images/Logo1.png" alt="Logo de la pagina, un gato negro con fondo multicolor" class="rounded-circle logo"></a>
+              <a class="navbar-brand name" href="index.html">TECHFORGE</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+
+              <div class="collapse navbar-collapse navitems" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active navitems listw navname" aria-current="page" href="index.html">Inicio</a>
+                  </li>
+              </div>
+              <div class="carritocontainer">
+                <img src="images/imagen_2024-06-02_210820704-removebg-preview.png" alt="" srcset="" class="carrito">
+                <p class="cantidad"> 0 </p>
+              </div>
+            </div>
+                </ul>
+              </div>
+            </div>
+          </nav>
+
+    </header>  
+    <!-- Fin header -->
 
 
+    <!-- Inicio productos -->
+    <main class="containeer">
+        <div class="conte prod">
+          <div class="proc-conte">
+    
+          </div>
+        </div>
+        </main>
+    <!-- Fin productos -->
 
+    <!-- Carrito -->
+    <div class="cartTab">
+      <h1>Carrito</h1>
+      <div class="listCart">
+        <div class="item">
+          <div class="images">
+            <img src="images/placasdevideo/_GeForce_RTX_4060_Ti_8Gb_Msi_Ventus_3X_Oc.png" alt="">
+          </div>
+          <div class="name">
+            <p>name</p>
+          </div>
+          <div class="totalPrecio">
+            <p>$200</p>
+          </div>
+          <div class="cantidades">
+            <span class="menos"><</span>
+            <span class="cant">1</span>
+            <span class="mas">></span>
+          </div>
+        </div>
+      </div>
+      <div class="total">
+        <p class="titu">Total de la compra: </p>
+        <p class="totally"></p>
+      </div>
+      <div class="btns">
+          <button class="cerrar">Cerrar</button>
+          <button class="finish" id="btnFin">Finalizar</button>
+      </div>
+    </div>
+    <!-- Fin carrito -->
 
-    <script src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
