--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                   <li class="nav-item">
                     <a class="nav-link active navitems listw navname" aria-current="page" href="index.html">Inicio</a>
                   </li>
-              </div>
-              <div class="carritocontainer">
-                <img src="images/imagen_2024-06-02_210820704-removebg-preview.png" alt="" srcset="" class="carrito">
-                <p class="cantidad"> 0 </p>
+                  <li class="carritocontainer">
+                    <img src="images/imagen_2024-06-02_210820704-removebg-preview.png" alt="" srcset="" class="carrito">
+                    <p class="cantidad"> 0 </p>
+                  </li>
               </div>
             </div>
                 </ul>
